# pico-wifi-boot-blink

./: .gitmodules  CMakeLists.txt  main.c
src/: main.c
